# voxspatium

./: .gitignore  CMakeLists.txt  README.md
data/shaders/: test.frag  test.vert  voxel.frag  voxel.vert
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Environment.cpp  Environment.h  Input.cpp  Input.h  Main.cpp  Shader.cpp  Shader.h
src/geometry/: Geometry.cpp  Geometry.h
src/texture/: Texture.cpp  Texture.h
src/util/: Common.h  Log.h  Math3D.h  Singleton.h
src/voxel/: VoxelChunk.cpp  VoxelChunk.h  VoxelGreedyMesh.cpp  VoxelGreedyMesh.h  VoxelWorld.cpp  VoxelWorld.h
